--- a/client/src/index.css
+++ b/client/src/index.css
@@ -187,3 +187,14 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+
+/*********** REGISTER PAGE ***********/
+
+.register{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+  flex-direction: column;
+}
