--- a/client/src/styles/AuthStyles.css
+++ b/client/src/styles/AuthStyles.css
@@ -15,6 +15,9 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 20px;
     background-color: #fff;
+    width: 500px;
+    max-width: 100%;
+    text-align: center;
   }
   
   .form-container form .title {
