--- a/client/src/index.css
+++ b/client/src/index.css
@@ -192,3 +192,7 @@ a:hover {
 /*********** REGISTER PAGE ***********/
 
 
+.product-link{
+  text-decoration: none !important ;
+  color: black !important;
+}
